ecmascript/parser/tests/test262-error-references/fail/794032efdfb20d41.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/794032efdfb20d41.js:1:8
  |
1 | (0, {a = 0}) => 0
  |        ^

